--- a/Checkpoint/Checkpoint.entitlements
+++ b/Checkpoint/Checkpoint.entitlements
@@ -12,5 +12,7 @@
 	<true/>
 	<key>com.apple.security.automation.apple-events</key>
 	<true/>
+	<key>com.apple.security.network.user-notification</key>
+	<true/>
 </dict>
 </plist>
